# tansa

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  offboard_ctrl.cpp  package.json  package.xml  run.js  start.sh  sync.sh  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: FindCplex.cmake
config/: config.json  home.json  jocs.json  routine.json  settings.json
config/docker/: README.md
config/docker/dev/: Dockerfile
config/docker/prebuilt/: Dockerfile
config/gazebo/: .gitignore  iris  preload.sh  x340
config/gazebo/worlds/: empty.world
config/models/: x260.js
config/models/x260/: index.js  rcS
config/models/x340/: index.js  rcS
config/params/: 260.json  default.json  sim.calib.json  x260.json
data/: circleSquare.csv  hover.csv  singleDrone.jocs  sixDroneDemo.jocs  test.csv  testing_all.csv
design/x340/: body.stl  dot-rod-holder.stl  xframe.stl
doc/: CoordinateFrames.md  Doxyfile  README.md  ServerApi.md  configuration.md  coordinate_frames.md  development.md  real_life_setup.md  routines.md  terminology.md
doc/examples/gazebo_spawn/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
docker/: commands
hardware/: README.md
hardware/beacon/enclosure/: beacon-lid.stl  beacon-shell.stl
hardware/beacon/schematic/: shield.brd  shield.sch
hardware/cf2/: RC_Receiver.md  README.md
hardware/x260/: ESC.md  README.md
hardware/x260/active_ir/: activeIr.brd  activeIr.sch  seeed_opl_bom.csv
hardware/x260/mesh/: body.stl  cage.stl  foamshell.stl  led-holder.stl  motormnt.stl  shell.stl  xframe-bot.stl  (+1 more)
hardware/x340/: README.md
include/: mavlink.h
include/tansa/: action.h  algorithm.h  breakpoint.h  channel.h  config.h  control.h  core.h  csv.h  data.h  estimation.h  gazebo.h  graphics.h  imaging.h  jocsParser.h  jocsPlayer.h  manager.h  mocap.h  model.h  net.h  osc.h  routine.h  simulate.h  time.h  trajectory.h  vehicle.h
launch/: basic.launch  mocap.launch  sim.launch
msg/: PointArray.msg
public/: index.html
public/flightControl/: fly.html  flyOffline.html  index.html  materials.min.js  package.json  tsconfig.json  webpack.config.js
public/models/: body.stl  drone.stl  propeller.stl
scripts/: jsdata_driver.js  pi_picture.sh  pid_simple.m  plot.py  setpoint_position_demo.py  setup_gazebo_paths.sh  start_gazebo.sh  start_instance.sh  start_many_instances.sh  start_sim.sh
scripts/camera_calibration/: CMakeLists.txt  camera_calibration.cpp  config.xml  config_images.xml
scripts/tracker/: setup.sh  ssh.sh  tracker.service  update.sh
src/: config.json  custom.cpp  gcs.cpp  jocsConfig.json  light_example.cpp  mocap_calibrate.cpp  mocap_test.cpp  offb_node.cpp  offboard_control.h  old_offboard2.cpp  old_offboard_ctrl.cpp  simple.cpp  simulate.cpp  state_log.cpp  test.cpp
src/algorithm/: assignment_solver.cpp  iterative_closest_point.cpp  rigid_point_correspondence_solver.cpp  rigid_transform.cpp
src/beacon/: CMakeLists.txt  calibration.cpp  calibration.h
src/control/: admittance.cpp  hover.cpp  lightcontrol.cpp  pid.h  position.cpp  tracker.h
src/core/: context.cpp  core.cpp  data.cpp  gazebo.cpp  messaging.cpp  net.cpp  tf.h  time.cpp  vehicle.cpp  vehicle_params.cpp  vehicle_pool.cpp  vehicle_time.cpp
src/estimation/: linear_complementary.cpp
src/gazebo/: CMakeLists.txt  gazebo.cpp  swarm_plugin.cpp
src/gazebo/msgs/: CMakeLists.txt  spawn.proto
src/graphics/: CMakeLists.txt  drawable.cpp  group.cpp  mesh.cpp  mesh_smf.cpp  mesh_stl.cpp  patch.cpp  polygon.cpp  shader.cpp  shapes.cpp  transform.cpp  utils.cpp  utils.h  window.cpp
src/graphics/shaders/: flat.fragment.glsl  flat.vertex.glsl  gouraud.fragment.glsl  gouraud.vertex.glsl  phong.fragment.glsl  phong.vertex.glsl
src/jocs/: action.cpp  csv.cpp  jocsParser.cpp  jocsPlayer.cpp  routine.cpp
src/lighting/: light_node.cpp
src/manager/: calibration.cpp  calibration.h  manager.cpp  preview.cpp  preview.h  safety_checks.cpp  safety_checks.h
src/mocap/: CMakeLists.txt  README.md  blob_detector.cpp  blob_detector.h  calibration.cpp  calibration.h  camera_main.cpp  camera_net.cpp  camera_net.h  camera_node.cpp  camera_node.h  camera_pool.cpp  camera_pool.h  mocap.cpp  mocap_gazebo_node.cpp  mocap_node.cpp  reconstruction.cpp  reconstruction.h  registration.cpp  rigid_body_tracker.cpp  rigid_body_tracker.h
src/mocap/camera/: CMakeLists.txt  main.cpp
src/mocap/interfaces/: README.md  file.cpp  file.h  raspicam.cpp  raspicam.h  virtual.cpp  virtual.h
src/mocap/optitrack/: ClientCore.cpp  ClientCore.h  NatNetClient.cpp  NatNetClient.h  NatNetTypes.h  natnet.cpp  natnet.h  natnet_client.cpp  natnet_client.h
src/model/: feasibility.cpp  solvers.cpp
src/planner/: README.md  planner_node.cpp
src/planning/: plan.h
src/routine/: routine.cpp  routine_player.cpp
src/server/: README.md  index.js  osc.cpp  socket.js
src/simulate/: battery.cpp  firmware.cpp  model.cpp  motor.cpp  multirotor.cpp  simulation.cpp
src/stereo/: CMakeLists.txt  README.md  SN1010.conf  SN3166.conf  config_file.h  match.cpp  match.py  stereo_match.py  test.cpp  test.py  utils.cpp  utils.h  zed.h  zed_info.txt  zed_usb.txt
src/swarm/: README.md  swarm_node.cpp
src/trajectory/: circle.cpp  ellipse.cpp  fourier.cpp  gradual_circle.cpp  light.cpp  linear.cpp  min_snap.cpp  minsnap.cpp  point.cpp  polynomial.cpp  spiral.cpp  spiral.py  strobe.cpp  utils.h
src/utils/: base64.cpp
src/vision/: CMakeLists.txt  bundle_adjustment.cpp  camera_model.cpp  reprojection_error.h  solve_pnp.cpp  triangulation.cpp
src/web/: app.js  index.js  log.js  main.js  navbar.js  ros.js  settings.js  settingsModal.js  socket.js  statusSign.js  style.css  utils.js
test/: main.cpp
test/algorithm/: assignment_solver.cpp  disjoint_sets.cpp  iterative_closest_point.cpp  rigid_point_correspondence_solver.cpp
test/beacon/: calibration.cpp
test/core/: time.cpp
test/jocs/: jocsParser.cpp
test/mocap/: calibration.cpp  registration.cpp  rigid_body_tracker.cpp
test/trajectory/: minsnap.cpp
testing/data/: JOCS.md  singleDrone.jocs
(+97 files in other folders)
